# gpx2mesh

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
gpx2mesh/: __init__.py
gpx2mesh/elevation/: __init__.py  source.py  test_source.py
gpx2mesh/elevation/sources/: __init__.py  test_folder_provider.py  test_nasa_provider.py
gpx2mesh/mesh/: __init__.py  medal.py
gpx2mesh/trace/: test_trace.py
src/: elevation.py  mesh.py  test_elevation.py  test_trace.py  trace.py
src/db/: con.py  load_elevation.py  test_con.py  test_load_elevation.py
src/elevation/: __init__.py  source.py  test_source.py
src/gpx2mesh/: __init__.py
src/gpx2mesh/elevation/: test_filenames.py
src/gpx2mesh/elevation/sources/: __init__.py
src/gpx2mesh/track/: __init__.py  test_track.py
src/mesh/: __init__.py  elevation.py  medal.py  track.py
